# 3DViewer

./: .gitignore  CMakeLists.txt  README.md
3DViewer/: CMakeLists.txt  main.cpp
3DViewer/Geometry/include/: CgalApi.h
3DViewer/Geometry/src/: CgalApi.cpp
3DViewer/Renderer/include/: Camera.h  OpenGLRenderer.h
3DViewer/Renderer/shaders/: main_frag.glsl  main_vert.glsl  shaders.qrc
3DViewer/Renderer/src/: Camera.cpp  OpenGLRenderer.cpp
3DViewer/Scene/include/: Scene.h  SceneObject.h
3DViewer/Scene/src/: Scene.cpp  SceneObject.cpp
3DViewer/UI/include/: 3DViewer.h  3DViewer.ui
3DViewer/UI/src/: 3DViewer.cpp  3DViewer.ui
ci/win/: build_windows.bat  check.bat
tests/: CMakeLists.txt  CgalApi_test.cpp  Cgal_api_test.cpp
